# Image-Processing-App

./: CMakeLists.txt  README.md  app.cpp
.github/workflows/: CI.yml
src/nodes/: BlurNode.cpp  BlurNode.h  BrightnessNode.cpp  BrightnessNode.h  ContrastNode.cpp  ContrastNode.h  EdgeDetection.cpp  EdgeDetection.h  EdgeDetectionNode.h  ExposureNode.cpp  ExposureNode.h  GrayScaleNode.cpp  GrayScaleNode.h  ImageInputNode.cpp  ImageInputNode.h  ImageOutputNode.cpp  ImageOutputNode.h  Node.cpp  Node.h  RotateNode.cpp  RotateNode.h  RotationNode.h  SharpenNode.cpp  SharpenNode.h  graph.h
